tests/snapshots/sfc/ts/basic__multiple_style_blocks.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 173
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

const _sfc_main = {}
const _hoisted_1 = { class: "a b", "data-v-a6e04d40": "" }

export function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", _hoisted_1, "Test"))
}

_sfc_main.render = render
_sfc_main.__scopeId = "data-v-a6e04d40"
export default _sfc_main
