tests/snapshots/sfc/ts/basic__script_and_template.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


const _sfc_main = { name: 'MyComponent' }

export function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, "Component"))
}

_sfc_main.render = render
export default _sfc_main
