tests/snapshots/sfc/ts/basic__script_setup_with_style.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 173
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"
import { defineComponent as _defineComponent } from 'vue'


const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const msg = 'hello'
  const __returned__ = { msg }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});

const _hoisted_1 = { class: "text" }

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", _hoisted_1, _toDisplayString($setup.msg)))
}

__sfc__.render = render
export default __sfc__
