tests/snapshots/sfc/ts/basic__template_only.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 173
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

const _sfc_main = {}
export function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, "Hello World"))
}

_sfc_main.render = render
export default _sfc_main
